# rangeTest

./: .gitignore  CMakeLists.txt  C言語でオブジェクト指向を実現する.md  include.drawio  interfaceSample.c  interfaceSample.h  interfaceSampleClass.h  main.c  makefile  rangeController.c  rangeController.h  rangeControllerClass.h  rangeCookModel.c  rangeCookModel.h  rangeCookModelClass.h  rangeKeyController.c  rangeKeyController.h  rangeKeyControllerClass.h  rangeMagnetronModel.c  rangeMagnetronModel.h  rangeMagnetronModelClass.h  rangeRelayModel.c  rangeRelayModel.h  rangeRelayModelClass.h  rangeTest  rangeTimerModel.h  rangeTimerModelClass.h  rangeTimer_Model.c  rangeView.c  rangeView.h  rangeViewClass.h  range_class_diagram.drawio  readme.md  sample.c  sample.h  sampleClass.h  プログラム構成.md  論文検討_TDD.md
improved/: ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  GUIDE.md  README.md  SUMMARY.md  application.c  application.h  core.c  core.h  extensions.c  extensions.h  io.c  io.h  main.c  test_core.c  types.h
singleton/: instance1.c  instance1.h  instance2.c  instance2.h  main.c  singletonTest.c  singletonTest.h
